ingestor com virtual threds e semaforo